gke-config/server-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-db
  labels:
    app: server-db
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server-db
  template:
    metadata:
      labels:
        app: server-db
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          # livenessProbe:
          #   exec:
          #     command:
          #       - mysqladmin
          #       - ping
          #       - -h
          #       - localhost
          #   failureThreshold: 10
          #   timeoutSeconds: 20
          ports:
            - containerPort: 3306
              # hostPort: 3306
              protocol: TCP
        - name: image-server1
          image: mohammedrashad/my-go-app:latest
          ports:
            - containerPort: 8010
              protocol: TCP
            - containerPort: 8012
              protocol: TCP

      restartPolicy: Always
