gke-config/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: development
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
    # - name: "mysql"
    - port: 3306
      # targetPort: 3306
      protocol: TCP
