gke-config/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: development
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
    # - name: "mysql"
    - port: 3306
      # targetPort: 3306
      protocol: TCP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: development
  name: db
  labels:
    app: db
spec:
  replicas: 2
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: ecommerce
            - name: MYSQL_ROOT_PASSWORD
              value: root
          image: mysql:latest
          # livenessProbe:
          #   exec:
          #     command:
          #       - mysqladmin
          #       - ping
          #       - -h
          #       - localhost
          #   failureThreshold: 10
          #   timeoutSeconds: 20
          name: db
          ports:
            - containerPort: 3306
              # hostPort: 3306
              protocol: TCP
      restartPolicy: Always
