gke-config/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: development
spec:
  type: NodePort
  ports:
    - name: "8010"
      port: 8010
      targetPort: 8010
      protocol: TCP
    - name: "8012"
      port: 8012
      targetPort: 8012
      protocol: TCP
  selector:
    app: server
