gke-config/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: development
spec:
  type: NodePort
  ports:
    - name: "8010"
      port: 8010
      targetPort: 8010
      protocol: TCP
    - name: "8012"
      port: 8012
      targetPort: 8012
      protocol: TCP
  selector:
    app: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: development
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  # strategy:
  #   type: Recreate
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - env:
            - name: DB_NAME
              value: ecommerce
            - name: DB_PORT
              value: "3306"
            - name: HOST
              # value: 192.168.58.2
              value: db
            - name: MYSQL_PASSWORD
              value: root
            - name: MYSQL_USER
              value: root
            - name: PPROF_PORT
              value: "8012"
            - name: SERVER_PORT
              value: "8010"
          image: mohammedrashad/my-go-app:v2
          name: image-server1
          ports:
            - containerPort: 8010
              protocol: TCP
            - containerPort: 8012
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8010
            initialDelaySeconds: 60
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8010
            initialDelaySeconds: 60
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8010
            initialDelaySeconds: 60
            periodSeconds: 5
      restartPolicy: Always
